// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSomeoneScreen next renders with back button correctly 1`] = `
<AddSomeoneScreen
  dispatch={[Function]}
  logoutOnBack={false}
  navigation={
    Object {
      "state": Object {
        "params": Object {},
      },
    }
  }
  next={[Function]}
/>
`;

exports[`AddStepScreen next renders correctly 1`] = `
<withI18nextTranslation(AddStepScreen)
  dispatch={[Function]}
  myId="123"
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "personId": "321",
          "trackingObj": Object {
            "level3": "steps",
            "level4": undefined,
            "name": "onboarding : person : steps : create",
            "section": "onboarding",
            "subsection": "person",
          },
          "type": "createStep",
        },
      },
    }
  }
  next={[Function]}
  personId="321"
  type="createStep"
/>
`;

exports[`CelebrationScreen next renders correctly 1`] = `
<CelebrationScreen
  dispatch={[Function]}
  navigation={
    Object {
      "state": Object {
        "params": Object {},
      },
    }
  }
  next={[Function]}
/>
`;

exports[`GetStartedScreen renders without back button correctly 1`] = `
<GetStartedScreen
  dispatch={[Function]}
  logoutOnBack={true}
  navigation={
    Object {
      "state": Object {
        "params": Object {},
      },
    }
  }
  next={[Function]}
/>
`;

exports[`PersonSelectStepScreen next renders correctly 1`] = `
<PersonSelectStepScreen
  contactName="Someone"
  contactStage={
    Object {
      "id": "3",
    }
  }
  dispatch={[Function]}
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "contactId": "321",
          "contactName": "Someone",
          "contactStage": Object {
            "id": "3",
          },
        },
      },
    }
  }
  next={[Function]}
  organization={Object {}}
/>
`;

exports[`SelectMyStepScreen renders correctly 1`] = `
<SelectMyStepScreen
  dispatch={[Function]}
  me={
    Object {
      "id": "123",
      "user": Object {
        "pathway_stage_id": "3",
      },
    }
  }
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "contactStage": Object {
            "id": "3",
          },
        },
      },
    }
  }
  next={[Function]}
  stageId="3"
/>
`;

exports[`SelectStageScreen person is me renders correctly 1`] = `
<SelectStageScreen
  dispatch={[Function]}
  isMe={true}
  myId="123"
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "personId": "123",
          "section": "onboarding",
          "subsection": "self",
        },
      },
    }
  }
  next={[Function]}
  stages={Array []}
/>
`;

exports[`SelectStageScreen person is other renders correctly 1`] = `
<SelectStageScreen
  dispatch={[Function]}
  firstName="Someone"
  isMe={false}
  myId="123"
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "personId": "321",
          "section": "onboarding",
          "subsection": "add person",
        },
      },
    }
  }
  next={[Function]}
  stages={Array []}
/>
`;

exports[`SetupPersonScreen next renders correctly 1`] = `
<SetupScreen
  dispatch={[Function]}
  isMe={false}
  loadedFirstName="Someone"
  next={[Function]}
  personId="321"
/>
`;

exports[`StageSuccessScreen renders correctly 1`] = `
<StageSuccessScreen
  dispatch={[Function]}
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "selectedStage": Object {
            "id": "3",
          },
        },
      },
    }
  }
  next={[Function]}
/>
`;

exports[`SuggestedStepDetailScreen next renders correctly 1`] = `
<withI18nextTranslation(SuggestedStepDetailScreen)
  dispatch={[Function]}
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "receiverId": "123",
          "step": Object {
            "id": "111",
          },
        },
      },
    }
  }
  next={[Function]}
  receiverId="123"
  step={
    Object {
      "id": "111",
    }
  }
/>
`;
